# ComputationalPhotography

./: .gitignore
hw1/homework/homework/: main.cpp
hw1/src/: BilateralFilter.cpp  BoxFilter.cpp  DFT.cpp  GaussianFilter.cpp  MedianFilter.cpp
hw2/SparseMatrix/SparseMatrix/: SparseMatrix.cpp  SparseMatrix.h  main.cpp
hw3/: Lab5非线性最小二乘.md  gaussian.py
hw3/GaussNewton/GaussNewton/: main.cpp  solver.h
hw3/NonlinearGaussNewton/: hw3_gn.h  main.cpp  solver.h
hw3/test/: CMakeLists.txt  main.cpp
hw5/lab_report_1/: lab_report_1.tex
hw5/opencv_stitch2-master/: README.md
hw5/opencv_stitch2-master/src/: CMakeLists.txt  Makefile  feature.h  main  main.cpp  projection.h
hw5/panorama/panorama/: hw6_pa.h  main.cpp  panorama.aps  panorama.cpp  panorama.h  resource.h
project/Edit-image-kivy-app-master/: main.py
project/Edit-image-kivy-app-master/components/: touch_selector.py
project/Edit-image-kivy-app-master/layout/: image_layout.py
project/GrabCut-master/: .gitignore  CMakeLists.txt  GCApplication.cpp  GCApplication.h  GMM.cpp  GMM.h  GlobalMatting.cpp  GlobalMatting.h  GrabCut.cpp  GrabCut.h  README.md  TrimapGenerator.cpp  TrimapGenerator.h  main.cpp
project/GrabCutUI/: example.py  main.py
project/grabcut/grabcut-advanced-cg/: BorderMatting.cpp  BorderMatting.h  CMakeLists.txt  Dinic.cpp  Dinic.h  GaussMixtureModel.cpp  GaussMixtureModel.h  GrabCut.cpp  GrabCut.h  KMeansImpl.cpp  KMeansImpl.h  WindowFramework.cpp  WindowFramework.h  main.cpp
project/src/: FileWidget.py  main.py
